--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Microverse Collaboration Henry & Imran</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
 
-    <h1>Hello World, we are software developers!</h1>
+    <title id="title">
+      <h1>Microverse Survey Form</h1>
+      <p id="description">This Survey form is intented to collect data of all prospective students of Microverse</p>
+    </title>
+
+    <form id="survey-form" action="">
+      <input type="text" name="" id="name" placeholder="Please Enter Your name">
+      
+
+
+
+    </form>
+
+    
 
 
 
