--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <form id="survey-form" action="">
       <input type="text" name="" id="name" placeholder="Please Enter Your name">
-      
+      <input type="email" name="" id="email" placeholder="Please Enter Your Email">
+      <input type="number" name="" id="number" placeholder="Please Enter Your Number">
 
 
 
