Added label to form, and also added placeholder and dropdown to the index.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
     </title>
 
     <form id="survey-form" action="">
+      <label for="name" id="name-label">Name</label>
       <input type="text" name="" id="name" placeholder="Please Enter Your name">
+
+      <label for="name" id="email-label">Email</label>
       <input type="email" name="" id="email" placeholder="Please Enter Your Email">
-      <input type="number" name="" id="number" placeholder="Please Enter Your Number">
+
+      <label for="name" id="number-label">Number</label>
+      <input type="number" max="50" min="1" name="" id="number" placeholder="Please Enter Your Number">
+      <select name="" id="dropdown">
+        <option value=""></option>
+      </select>
 
 
 
