aded radio button, checkbox and textarea

--- a/index.html
+++ b/index.html
@@ -23,10 +23,22 @@
       <label for="name" id="number-label">Number</label>
       <input type="number" max="50" min="1" name="" id="number" placeholder="Please Enter Your Number">
       <select name="" id="dropdown">
-        <option value=""></option>
+        <option value="">Student</option>
+        <option value="">Full Time Job</option>
+        <option value="">Full Time Learner</option>
+        <option value="">Prefer not to say</option>
+        <option value="">Other</option>
       </select>
 
+      <label><input name="" type="radio" value="" >Definitely</label>
+      <label><input name="" type="radio" value="" >Maybe</label>
+      <label><input name="" type="radio" value="" >Not Sure</label>
 
+      <label><input type="checkbox" name="" id="" value="Front-end Projects">Front-end Projects</label>
+      <label><input type="checkbox" name="" id="" value="Back-end Projects">Back-end Projects</label>
+      <label><input type="checkbox" name="" id="" value="Data Visualization">Data Visualization</label>
+
+      <label><textarea name="comment" placeholder="Enter comment"></textarea>Comment</label>
 
     </form>
 
